[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/avatar/adventurer-run-01.png" type="Texture" id=1]
[ext_resource path="res://assets/avatar/adventurer-run-02.png" type="Texture" id=2]
[ext_resource path="res://assets/avatar/adventurer-jump-00.png" type="Texture" id=3]
[ext_resource path="res://assets/avatar/adventurer-run-00.png" type="Texture" id=4]
[ext_resource path="res://assets/avatar/adventurer-jump-01.png" type="Texture" id=5]
[ext_resource path="res://assets/avatar/adventurer-jump-02.png" type="Texture" id=6]
[ext_resource path="res://assets/avatar/adventurer-jump-03.png" type="Texture" id=7]
[ext_resource path="res://avatar/Avatar.gd" type="Script" id=8]
[ext_resource path="res://assets/sounds/death.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/avatar/adventurer-attack2-05.png" type="Texture" id=11]
[ext_resource path="res://assets/avatar/adventurer-attack2-03.png" type="Texture" id=12]
[ext_resource path="res://assets/avatar/adventurer-attack2-04.png" type="Texture" id=13]
[ext_resource path="res://assets/avatar/adventurer-attack2-00.png" type="Texture" id=14]
[ext_resource path="res://assets/avatar/adventurer-attack2-01.png" type="Texture" id=15]
[ext_resource path="res://assets/avatar/adventurer-attack2-02.png" type="Texture" id=16]
[ext_resource path="res://assets/avatar/adventurer-air-attack2-00.png" type="Texture" id=17]
[ext_resource path="res://assets/avatar/adventurer-air-attack2-01.png" type="Texture" id=18]
[ext_resource path="res://assets/avatar/adventurer-air-attack2-02.png" type="Texture" id=19]
[ext_resource path="res://HUD/HPBarUI.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/avatar/adventurer-idle-00.png" type="Texture" id=21]
[ext_resource path="res://assets/avatar/adventurer-idle-01.png" type="Texture" id=22]
[ext_resource path="res://assets/avatar/adventurer-idle-02.png" type="Texture" id=23]
[ext_resource path="res://assets/avatar/adventurer-idle-03.png" type="Texture" id=24]
[ext_resource path="res://assets/avatar/adventurer-drop-kick-00.png" type="Texture" id=25]
[ext_resource path="res://assets/avatar/adventurer-drop-kick-01.png" type="Texture" id=26]
[ext_resource path="res://assets/avatar/adventurer-drop-kick-02.png" type="Texture" id=27]
[ext_resource path="res://assets/avatar/adventurer-drop-kick-03.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "AirAttack",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": true,
"name": "Attack",
"speed": 6.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21, 4 )

[node name="Avatar" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Dash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 35 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.8

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -25.0

[node name="HPBarUI" parent="." instance=ExtResource( 20 )]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
